# GE

./: CMakeLists.txt  Includes.h  commit.sh  pseudo code
BootLoader/: BootLoader.cpp  BootLoader.h  CoreIncludes.h
concepts/: IMConcepts.h
include/TimeManagementService/: MainRunner.h  MessageDispatcher.h  MosquittoAsyncClient.h  ScheduledTask.h  TransactionManager.h
include/temp/: GithubActionInterface.h  LibIPC.h  WebServerBackend.h
ptskn/: AITester.cpp  AITester.h  AiTest.cpp  AiTest.h  ClangTokenExtractorTester.cpp  ClangTokensExtractor.h  File.h  Mutex.h  String.h
src/: Main.cpp
src/TimeManagementService/: MessageDispatcher.cpp  MosquittoAsyncClient.cpp  ScheduledTask.cpp  TransactionManager.cpp
src/temp/: GitMain.cpp  GithubActionInterface.cpp  LibIPC.cpp  WebServerBackend.cpp
